Bnfc/ParCringe.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParCringe.y
-----------------------------------------------------------------------------

state 77 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Char -> L_charac                                   (2)
	Integer -> L_integ                                 (3)
	String -> L_quoted                                 (4)
	Program -> ListStmt                                (5)
	Block -> '{' ListStmt '}'                          (6)
	ListStmt ->                                        (7)
	ListStmt -> Stmt ListStmt                          (8)
	Stmt -> ';'                                        (9)
	Stmt -> Block                                      (10)
	Stmt -> Type Item ';'                              (11)
	Stmt -> 'immutable' Type Item ';'                  (12)
	Stmt -> Ident '=' Expr ';'                         (13)
	Stmt -> 'inc' Ident ';'                            (14)
	Stmt -> 'dec' Ident ';'                            (15)
	Stmt -> 'return' Expr ';'                          (16)
	Stmt -> 'return' ';'                               (17)
	Stmt -> 'if' '(' Expr ')' Stmt                     (18)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (19)
	Stmt -> 'while' '(' Expr ')' Stmt                  (20)
	Stmt -> 'from' Ident '=' Expr 'to' Expr 'do' Stmt   (21)
	Stmt -> 'print' Expr ';'                           (22)
	Stmt -> 'printLn' Expr ';'                         (23)
	Stmt -> 'exit' ';'                                 (24)
	Stmt -> 'skip' ';'                                 (25)
	Stmt -> Expr ';'                                   (26)
	Item -> Ident                                      (27)
	Item -> Ident '=' Expr                             (28)
	Type -> 'int'                                      (29)
	Type -> 'char'                                     (30)
	Type -> 'string'                                   (31)
	Type -> 'bool'                                     (32)
	Type -> 'void'                                     (33)
	Type -> 'fun' '[' ListArgType '->' Type ']'        (34)
	ArgType -> Type                                    (35)
	ArgType -> 'ref' Type                              (36)
	ListArgType ->                                     (37)
	ListArgType -> ArgType                             (38)
	ListArgType -> ArgType ',' ListArgType             (39)
	Arg -> ArgType Ident                               (40)
	ListArg ->                                         (41)
	ListArg -> Arg                                     (42)
	ListArg -> Arg ',' ListArg                         (43)
	Expr6 -> Ident                                     (44)
	Expr6 -> Integer                                   (45)
	Expr6 -> Char                                      (46)
	Expr6 -> String                                    (47)
	Expr6 -> 'true'                                    (48)
	Expr6 -> 'false'                                   (49)
	Expr6 -> '(' ListArg ')' '->' Type Block           (50)
	Expr6 -> Ident '(' ListExpr ')'                    (51)
	Expr6 -> '(' Expr ')'                              (52)
	Expr5 -> '-' Expr6                                 (53)
	Expr5 -> 'not' Expr6                               (54)
	Expr5 -> Expr6                                     (55)
	Expr4 -> Expr4 MulOp Expr5                         (56)
	Expr4 -> Expr5                                     (57)
	Expr3 -> Expr3 AddOp Expr4                         (58)
	Expr3 -> Expr4                                     (59)
	Expr2 -> Expr2 RelOp Expr3                         (60)
	Expr2 -> Expr3                                     (61)
	Expr1 -> Expr2 'and' Expr1                         (62)
	Expr1 -> Expr2                                     (63)
	Expr -> Expr1 'or' Expr                            (64)
	Expr -> Expr1                                      (65)
	ListExpr ->                                        (66)
	ListExpr -> Expr                                   (67)
	ListExpr -> Expr ',' ListExpr                      (68)
	AddOp -> '+'                                       (69)
	AddOp -> '-'                                       (70)
	MulOp -> '*'                                       (71)
	MulOp -> '/'                                       (72)
	MulOp -> 'mod'                                     (73)
	RelOp -> '<'                                       (74)
	RelOp -> '<='                                      (75)
	RelOp -> '>'                                       (76)
	RelOp -> '>='                                      (77)
	RelOp -> 'is'                                      (78)
	RelOp -> 'is' 'not'                                (79)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'-'            { PT _ (TS _ 6) }
	'->'           { PT _ (TS _ 7) }
	'/'            { PT _ (TS _ 8) }
	';'            { PT _ (TS _ 9) }
	'<'            { PT _ (TS _ 10) }
	'<='           { PT _ (TS _ 11) }
	'='            { PT _ (TS _ 12) }
	'>'            { PT _ (TS _ 13) }
	'>='           { PT _ (TS _ 14) }
	'['            { PT _ (TS _ 15) }
	']'            { PT _ (TS _ 16) }
	'and'          { PT _ (TS _ 17) }
	'bool'         { PT _ (TS _ 18) }
	'char'         { PT _ (TS _ 19) }
	'dec'          { PT _ (TS _ 20) }
	'do'           { PT _ (TS _ 21) }
	'else'         { PT _ (TS _ 22) }
	'exit'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'from'         { PT _ (TS _ 25) }
	'fun'          { PT _ (TS _ 26) }
	'if'           { PT _ (TS _ 27) }
	'immutable'    { PT _ (TS _ 28) }
	'inc'          { PT _ (TS _ 29) }
	'int'          { PT _ (TS _ 30) }
	'is'           { PT _ (TS _ 31) }
	'mod'          { PT _ (TS _ 32) }
	'not'          { PT _ (TS _ 33) }
	'or'           { PT _ (TS _ 34) }
	'print'        { PT _ (TS _ 35) }
	'printLn'      { PT _ (TS _ 36) }
	'ref'          { PT _ (TS _ 37) }
	'return'       { PT _ (TS _ 38) }
	'skip'         { PT _ (TS _ 39) }
	'string'       { PT _ (TS _ 40) }
	'to'           { PT _ (TS _ 41) }
	'true'         { PT _ (TS _ 42) }
	'void'         { PT _ (TS _ 43) }
	'while'        { PT _ (TS _ 44) }
	'{'            { PT _ (TS _ 45) }
	'}'            { PT _ (TS _ 46) }
	L_Ident        { PT _ (TV _) }
	L_charac       { PT _ (TC _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Char            rule  2
	Integer         rule  3
	String          rule  4
	Program         rule  5
	Block           rule  6
	ListStmt        rules 7, 8
	Stmt            rules 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26
	Item            rules 27, 28
	Type            rules 29, 30, 31, 32, 33, 34
	ArgType         rules 35, 36
	ListArgType     rules 37, 38, 39
	Arg             rule  40
	ListArg         rules 41, 42, 43
	Expr6           rules 44, 45, 46, 47, 48, 49, 50, 51, 52
	Expr5           rules 53, 54, 55
	Expr4           rules 56, 57
	Expr3           rules 58, 59
	Expr2           rules 60, 61
	Expr1           rules 62, 63
	Expr            rules 64, 65
	ListExpr        rules 66, 67, 68
	AddOp           rules 69, 70
	MulOp           rules 71, 72, 73
	RelOp           rules 74, 75, 76, 77, 78, 79

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	';'            shift, and enter state 21
	'bool'         shift, and enter state 22
	'char'         shift, and enter state 23
	'dec'          shift, and enter state 24
	'exit'         shift, and enter state 25
	'false'        shift, and enter state 26
	'from'         shift, and enter state 27
	'fun'          shift, and enter state 28
	'if'           shift, and enter state 29
	'immutable'    shift, and enter state 30
	'inc'          shift, and enter state 31
	'int'          shift, and enter state 32
	'not'          shift, and enter state 33
	'print'        shift, and enter state 34
	'printLn'      shift, and enter state 35
	'return'       shift, and enter state 36
	'skip'         shift, and enter state 37
	'string'       shift, and enter state 38
	'true'         shift, and enter state 39
	'void'         shift, and enter state 40
	'while'        shift, and enter state 41
	'{'            shift, and enter state 42
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_quoted       shift, and enter state 45
	%eof           reduce using rule 7

	Ident          goto state 3
	Char           goto state 4
	Integer        goto state 5
	String         goto state 6
	Program        goto state 7
	Block          goto state 8
	ListStmt       goto state 9
	Stmt           goto state 10
	Type           goto state 11
	Expr6          goto state 12
	Expr5          goto state 13
	Expr4          goto state 14
	Expr3          goto state 15
	Expr2          goto state 16
	Expr1          goto state 17
	Expr           goto state 18

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'and'          reduce using rule 1
	'do'           reduce using rule 1
	'is'           reduce using rule 1
	'mod'          reduce using rule 1
	'or'           reduce using rule 1
	'to'           reduce using rule 1


State 3

	Stmt -> Ident . '=' Expr ';'                        (rule 13)
	Expr6 -> Ident .                                    (rule 44)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 51)

	'('            shift, and enter state 88
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'='            shift, and enter state 89
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'and'          reduce using rule 44
	'is'           reduce using rule 44
	'mod'          reduce using rule 44
	'or'           reduce using rule 44


State 4

	Expr6 -> Char .                                     (rule 46)

	')'            reduce using rule 46
	'*'            reduce using rule 46
	'+'            reduce using rule 46
	','            reduce using rule 46
	'-'            reduce using rule 46
	'/'            reduce using rule 46
	';'            reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	'and'          reduce using rule 46
	'do'           reduce using rule 46
	'is'           reduce using rule 46
	'mod'          reduce using rule 46
	'or'           reduce using rule 46
	'to'           reduce using rule 46


State 5

	Expr6 -> Integer .                                  (rule 45)

	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'and'          reduce using rule 45
	'do'           reduce using rule 45
	'is'           reduce using rule 45
	'mod'          reduce using rule 45
	'or'           reduce using rule 45
	'to'           reduce using rule 45


State 6

	Expr6 -> String .                                   (rule 47)

	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'and'          reduce using rule 47
	'do'           reduce using rule 47
	'is'           reduce using rule 47
	'mod'          reduce using rule 47
	'or'           reduce using rule 47
	'to'           reduce using rule 47


State 7

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 8

	Stmt -> Block .                                     (rule 10)

	'('            reduce using rule 10
	'-'            reduce using rule 10
	';'            reduce using rule 10
	'bool'         reduce using rule 10
	'char'         reduce using rule 10
	'dec'          reduce using rule 10
	'exit'         reduce using rule 10
	'false'        reduce using rule 10
	'from'         reduce using rule 10
	'fun'          reduce using rule 10
	'if'           reduce using rule 10
	'immutable'    reduce using rule 10
	'inc'          reduce using rule 10
	'int'          reduce using rule 10
	'not'          reduce using rule 10
	'print'        reduce using rule 10
	'printLn'      reduce using rule 10
	'return'       reduce using rule 10
	'skip'         reduce using rule 10
	'string'       reduce using rule 10
	'true'         reduce using rule 10
	'void'         reduce using rule 10
	'while'        reduce using rule 10
	'{'            reduce using rule 10
	'}'            reduce using rule 10
	L_Ident        reduce using rule 10
	L_charac       reduce using rule 10
	L_integ        reduce using rule 10
	L_quoted       reduce using rule 10
	%eof           reduce using rule 10


State 9

	Program -> ListStmt .                               (rule 5)

	%eof           reduce using rule 5


State 10

	ListStmt -> Stmt . ListStmt                         (rule 8)

	'('            shift, and enter state 19
	'-'            shift, and enter state 20
	';'            shift, and enter state 21
	'bool'         shift, and enter state 22
	'char'         shift, and enter state 23
	'dec'          shift, and enter state 24
	'exit'         shift, and enter state 25
	'false'        shift, and enter state 26
	'from'         shift, and enter state 27
	'fun'          shift, and enter state 28
	'if'           shift, and enter state 29
	'immutable'    shift, and enter state 30
	'inc'          shift, and enter state 31
	'int'          shift, and enter state 32
	'not'          shift, and enter state 33
	'print'        shift, and enter state 34
	'printLn'      shift, and enter state 35
	'return'       shift, and enter state 36
	'skip'         shift, and enter state 37
	'string'       shift, and enter state 38
	'true'         shift, and enter state 39
	'void'         shift, and enter state 40
	'while'        shift, and enter state 41
	'{'            shift, and enter state 42
	'}'            reduce using rule 7
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 43
	L_integ        shift, and enter state 44
	L_quoted       shift, and enter state 45
	%eof           reduce using rule 7

	Ident          goto state 3
	Char           goto state 4
	Integer        goto state 5
	String         goto state 6
	Block          goto state 8
	ListStmt       goto state 87
	Stmt           goto state 10
	Type           goto state 11
	Expr6          goto state 12
	Expr5          goto state 13
	Expr4          goto state 14
	Expr3          goto state 15
	Expr2          goto state 16
	Expr1          goto state 17
	Expr           goto state 18

State 11

	Stmt -> Type . Item ';'                             (rule 11)

	L_Ident        shift, and enter state 2

	Ident          goto state 85
	Item           goto state 86

State 12

	Expr5 -> Expr6 .                                    (rule 55)

	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'and'          reduce using rule 55
	'do'           reduce using rule 55
	'is'           reduce using rule 55
	'mod'          reduce using rule 55
	'or'           reduce using rule 55
	'to'           reduce using rule 55


State 13

	Expr4 -> Expr5 .                                    (rule 57)

	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'and'          reduce using rule 57
	'do'           reduce using rule 57
	'is'           reduce using rule 57
	'mod'          reduce using rule 57
	'or'           reduce using rule 57
	'to'           reduce using rule 57


State 14

	Expr4 -> Expr4 . MulOp Expr5                        (rule 56)
	Expr3 -> Expr4 .                                    (rule 59)

	')'            reduce using rule 59
	'*'            shift, and enter state 82
	'+'            reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'/'            shift, and enter state 83
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	'and'          reduce using rule 59
	'do'           reduce using rule 59
	'is'           reduce using rule 59
	'mod'          shift, and enter state 84
	'or'           reduce using rule 59
	'to'           reduce using rule 59

	MulOp          goto state 81

State 15
